iptables/openSUSE/rules.v4
# Generated by iptables-save v1.8.7 on Sat Mar 28 22:21:51 2026
*nat
:PREROUTING ACCEPT [1204:54328]
:INPUT ACCEPT [315:16708]
:OUTPUT ACCEPT [171:11502]
:POSTROUTING ACCEPT [171:11502]
COMMIT
# Completed on Sat Mar 28 22:21:51 2026
# Generated by iptables-save v1.8.7 on Sat Mar 28 22:21:51 2026
*mangle
:PREROUTING ACCEPT [23991:3733714]
:INPUT ACCEPT [23428:3711382]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21927:2185769]
:POSTROUTING ACCEPT [21927:2185769]
COMMIT
# Completed on Sat Mar 28 22:21:51 2026
# Generated by iptables-save v1.8.7 on Sat Mar 28 22:21:51 2026
*raw
:PREROUTING ACCEPT [23991:3733714]
:OUTPUT ACCEPT [21927:2185769]
COMMIT
# Completed on Sat Mar 28 22:21:51 2026
# Generated by iptables-save v1.8.7 on Sat Mar 28 22:21:51 2026
*security
:INPUT ACCEPT [23100:3696014]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21927:2185769]
COMMIT
# Completed on Sat Mar 28 22:21:51 2026
# Generated by iptables-save v1.8.7 on Sat Mar 28 22:21:51 2026
*filter
:INPUT ACCEPT [29:1360]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1259:128608]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m set --match-set whitelist src -j ACCEPT
-A INPUT -m set --match-set ssh src -j DROP
-A INPUT -m set --match-set sip src -j DROP
-A INPUT -m set --match-set db src -j DROP
-A INPUT -m set --match-set web src -j DROP
-A INPUT -m set --match-set proxy src -j DROP
-A INPUT -m set --match-set email src -j DROP
-A INPUT -m set --match-set blacklist src -j DROP
COMMIT
# Completed on Sat Mar 28 22:21:51 2026
